# cpp-IK-Niryo

./: CMakeLists.txt  README.md  demo.yaml  ned2_validator.cpp  niryo_ned2.urdf  validate_yaml_poses.cpp
robot_config/: niryo_ned2.urdf
